fix: reject incomplete osv bulk archives